Fix responsiveness and overflowing on video page

--- a/static/styles/video-content.css
+++ b/static/styles/video-content.css
@@ -49,3 +49,64 @@
     margin-top: -16px;
     margin-left: -15px;
 }
+
+#user-stats{
+    display: block;
+}
+
+.tabcontent{
+    overflow: scroll;
+}
+
+.video-container{
+    position:relative;
+    padding-bottom:56.25%;
+    padding-top:30px;
+    height:0;
+    overflow:hidden;
+}
+
+.video-container iframe{
+    position:absolute;
+    top:0;
+    left:0;
+    width:100%;
+    height:100%;
+}
+
+.tabcontent p{
+    margin-bottom: 3px;
+}
+
+#creator-info{
+    padding:20px;
+    margin-top:25px;
+    border: 1px solid #e8e8e8;
+}
+
+#comments-section{
+    padding: 20px;
+    border: 1px solid #e8e8e8;
+    margin: 25px auto;
+}
+
+.user-details{
+    max-width: 25%;
+}
+
+.comment-bubble{
+    width:70%;
+}
+
+.tab button.active{
+    background-color: #B5428B !important;
+    color: #fff;
+}
+
+.tab button.tablinks{
+    width:50%;
+}
+
+#creator-name{
+    background-color: #f9f9f9;
+}
